contraste solve

--- a/css/stylesHome.css
+++ b/css/stylesHome.css
@@ -123,7 +123,7 @@ section p{
   width: auto;
   padding: 16px;
   margin-top: -22px;
-  color: white;
+  color: #144a83;
   font-weight: bold;
   font-size: 18px;
   transition: 0.6s ease;
@@ -138,7 +138,7 @@ section p{
 
 .prev:hover,
 .next:hover {
-  background-color: rgba(0, 0, 0, 0.8);
+  background-color: rgba(165, 164, 164, 0.8);
 }
 
 .fade {
